<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JEditTextSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="enable_tts">Enable TTS</string>
    <string name="enable_shake_animation">Enable Shake Animation</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>

</resources>
