<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom_edittext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/am_relOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:id="@+id/ll_enableTTS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/am_tvEnableTTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_tts"/>

            <ToggleButton
                android:id="@+id/am_switchEnableTTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textOn="@string/enable"
                android:textOff="@string/disable"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_enableAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll_enableTTS"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/am_tvEnableAnimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_shake_animation"/>

            <ToggleButton
                android:id="@+id/am_switchEnableAnimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textOn="@string/enable"
                android:textOff="@string/disable"/>

            <!--android:textOn="@string/enable"
            android:textOff="@string/disable"-->
        </LinearLayout>

    </RelativeLayout>

    <com.jay.jedittext.JEditText
        android:id="@+id/am_etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/am_relOptions"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        custom_edittext:enabletts = "true"/>

    <com.jay.jedittext.JEditText
        android:id="@+id/am_etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/am_etLogin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        custom_edittext:enabletts = "true"/>
    
    <Button 
        android:id="@+id/am_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/am_etPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/login"
        android:layout_centerHorizontal="true"/>
    
</RelativeLayout>